@@ -8,7 +8,7 @@
   <property name="home" location="../.."/>
   <property name="classpath" location="javaforce.jar"/>
   <property name="jre" location="${home}/jre_base_desktop"/>
-  <property name="version" value="0.13"/>
+  <property name="version" value="0.14"/>
 
   <property name="debian.depends" value="ffmpeg"/>
   <property name="fedora.depends" value="ffmpeg"/>
