@@ -3,8 +3,11 @@ jfDVR
 
 Records IP cameras over RTSP (h264/h265).
 
-Typical video URL : rtsp://username:password@192.168.1.15/cam/realmonitor?channel=1&subtype=0
-Typical picture URL : http://username:password@192.168.1.16/cgi-bin/snapshot.cgi
+Typical video URLs:
+  rtsp://username:password@192.168.1.15/cam/realmonitor?channel=1&subtype=0
+  rtsp://username:password@192.168.1.16/profile4
+Typical picture URL:
+  http://username:password@192.168.1.16/cgi-bin/snapshot.cgi
 
 iSpy Connect can help detect URLs.
 
@@ -19,6 +22,3 @@ Downloads & Bug Reports : jfdvr.sf.net
 Source : github.com/pquiring/javaforce/tree/master/projects/jfdvr
 
 Author : Peter Quiring (pquiring at gmail dot com)
-
-Release Date : Feb 2, 2024
-Version : 0.13
