@@ -1,3 +1,8 @@
+Feb 17, 2024 : 0.14 released!
+  - fix config issues
+  - fix service shutdown
+  - fix viewer/decoder
+
 Feb 2, 2024 : 0.13 released!
   - new : added high/low res streams
   - new : added viewer
